--- a/code/mini-program/common/css/common.css
+++ b/code/mini-program/common/css/common.css
@@ -14,6 +14,21 @@
 .fr {
   float: right !important;
 }
+.fs_26,.fs26 {
+  font-size: 26rpx !important;
+}
+.fs_28,.fs28 {
+  font-size: 26rpx !important;
+}
+.fs_30,.fs30 {
+  font-size: 30rpx !important;
+}
+.fs_24,.fs24 {
+  font-size: 24rpx !important;
+}
+.fs_20,.fs20 {
+  font-size: 20rpx !important;
+}
 .border_left {
   box-sizing: border-box;
   border-left: 1rpx solid rgba(214, 219, 226, 1);
