--- a/code/mini-program/common/css/base.css
+++ b/code/mini-program/common/css/base.css
@@ -51,3 +51,24 @@ image {
 input {
   display: inline-block;
 }
+.btn {
+  padding: 0 25rpx;
+  line-height: 42rpx;
+  background: #5bc240;
+  color: #fff;
+  display: inline-block;
+  font-size: 24rpx;
+  border-radius: 3px;
+  width: 150rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+}
+.b-btn {
+  color: #fff;
+  height: 88rpx;
+  font-size: 34rpx;
+  margin-top: 50rpx;
+  margin-left: 25rpx;
+  margin: 50rpx 25rpx 25rpx 25rpx;
+  background-color: rgba(91, 194, 64, 1);
+}
